[package]
name = "sixteenbit"
version = "0.1.0"
edition = "2021"

[lib]
name = "sixteenbit_encoding"


[[bin]]
name = "editor"
required-features = ["gui", "dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# command line arg parsing
clap = { version = "4.4", optional = true }
# image manipulation tools
image = "0.24"
# for implementing serialize
serde = "1.0"
# lets our rust types transmute into raw bytes easily
bytemuck = { version = "1.14", features=["derive", "min_const_generics"] }
# asserts that our pixel counts match our array sizes
static_assertions = "1.1"

# bevy game engine and ecs. TODO: trim default features
bevy = { version = "0.12", optional = true }
bevy_egui = {version = "0.23", optional = true }

[features]
default = ["args", "gui", "dynamic_linking"]
args = ["dep:clap"]
gui = ["dep:bevy", "dep:bevy_egui"]
dynamic_linking = ["bevy/dynamic_linking"]